preload image tags

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Fira+Sans+Extra+Condensed:wght@100;400&display=swap" rel="stylesheet">
+  <link rel="preload" as="image" href="https://d19o4on8ic4v9y.cloudfront.net/images/banner1.png?d=600x620">
+  <link rel="preload" as="image" href="https://d19o4on8ic4v9y.cloudfront.net/images/white-logo.png">
+  <link rel="prefetch" href="https://d19o4on8ic4v9y.cloudfront.net/images/t-banner.png?d=500x520">
+  <link rel="prefetch" href="https://d19o4on8ic4v9y.cloudfront.net/images/torno3.png?d=1920x1080">
 </head>
 <body>
   <app-root></app-root>
