feat: WIP esmaltes pages

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
   <link rel="preload" as="image" href="https://d19o4on8ic4v9y.cloudfront.net/images/white-logo.png">
   <link rel="prefetch" href="https://d19o4on8ic4v9y.cloudfront.net/images/t-banner.png?d=500x520">
   <link rel="prefetch" href="https://d19o4on8ic4v9y.cloudfront.net/images/torno3.png?d=1920x1080">
+  <link rel="prefetch" href="https://d19o4on8ic4v9y.cloudfront.net/images/esmalte-header-1.png">
 </head>
 <body>
   <app-root></app-root>
